--- a/admin/view/template/extension/report/product_viewed_info.twig
+++ b/admin/view/template/extension/report/product_viewed_info.twig
@@ -1,44 +1,76 @@
-<div class="panel panel-default">
-  <div class="panel-heading">
-    <div class="pull-right">
-      <a href="{{ reset }}" class="btn btn-danger btn-xs"><i class="fa fa-refresh"></i> {{ button_reset }}</a>
-    </div>
-    <h3 class="panel-title"><i class="fa fa-filter"></i> {{ heading_title }}</h3>
-  </div>
-  <div class="panel-body">
-    <div class="table-responsive">
-      <table class="table table-bordered">
-        <thead>
-          <tr>
-            <td class="text-left">{{ column_name }}</td>
-            <td class="text-left">{{ column_model }}</td>
-            <td class="text-right">{{ column_viewed }}</td>
-            <td class="text-right">{{ column_percent }}</td>
-          </tr>
-        </thead>
-        <tbody>
-        
-        {% if products %}
-        {% for product in products %}
-        <tr>
-          <td class="text-left">{{ product.name }}</td>
-          <td class="text-left">{{ product.model }}</td>
-          <td class="text-right">{{ product.viewed }}</td>
-          <td class="text-right">{{ product.percent }}</td>
-        </tr>
-        {% endfor %}
-        {% else %}
-        <tr>
-          <td class="text-center" colspan="4">{{ text_no_results }}</td>
-        </tr>
-        {% endif %}
-        </tbody>
-        
-      </table>
-    </div>
-    <div class="row">
-      <div class="col-sm-6 text-left">{{ pagination }}</div>
-      <div class="col-sm-6 text-right">{{ results }}</div>
+<div class="row">
+  <div id="filter-report" class="col-md-3 col-md-push-9 col-sm-12 hidden-sm hidden-xs">
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h3 class="panel-title"><i class="fa fa-filter"></i> {{ text_filter }}</h3>
+      </div>
+      <div class="panel-body">
+        <div class="form-group">
+          <label class="control-label" for="filter_description">Filtrar produto</label>
+          <input type="text" name="filter_description" value="{{ filter_description }}" placeholder="Filtrar produto" id="filter_description" class="form-control" />
+        </div>
+        <div class="form-group text-right">
+          <button type="button" id="button-filter" class="btn btn-default"><i class="fa fa-filter"></i> {{ button_filter }}</button>
+        </div>
+      </div>
     </div>
   </div>
+  <div class="col-md-9 col-md-pull-3 col-sm-12">
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <div class="pull-right">
+          <a href="{{ reset }}" class="btn btn-danger btn-xs"><i class="fa fa-refresh"></i> {{ button_reset }}</a>
+        </div>
+        <h3 class="panel-title"><i class="fa fa-filter"></i> {{ heading_title }}</h3>
+      </div>
+      <div class="panel-body">
+        <div class="table-responsive">
+          <table class="table table-bordered">
+            <thead>
+              <tr>
+                <td class="text-left">{{ column_name }}</td>
+                <td class="text-left">{{ column_model }}</td>
+                <td class="text-right">{{ column_viewed }}</td>
+                <td class="text-right">{{ column_percent }}</td>
+              </tr>
+            </thead>
+            <tbody>
+            
+            {% if products %}
+            {% for product in products %}
+            <tr>
+              <td class="text-left">{{ product.name }}</td>
+              <td class="text-left">{{ product.model }}</td>
+              <td class="text-right">{{ product.viewed }}</td>
+              <td class="text-right">{{ product.percent }}</td>
+            </tr>
+            {% endfor %}
+            {% else %}
+            <tr>
+              <td class="text-center" colspan="4">{{ text_no_results }}</td>
+            </tr>
+            {% endif %}
+            </tbody>
+            
+          </table>
+        </div>
+        <div class="row">
+          <div class="col-sm-6 text-left">{{ pagination }}</div>
+          <div class="col-sm-6 text-right">{{ results }}</div>
+        </div>
+      </div>
+    </div>
 </div>
+<script type="text/javascript"><!--
+$('#button-filter').on('click', function() {
+	var url = '';
+	
+	var filter_description = $('input[name=\'filter_description\']').val();
+	
+	if (filter_description) {
+		url += '&filter_description=' + encodeURIComponent(filter_description);
+	}
+	
+	location = 'index.php?route=report/report&code=product_viewed&user_token={{ user_token }}' + url;
+});
+//--></script> 
