add whatsapp button

--- a/catalog/view/theme/tt_t902/template/common/footer.twig
+++ b/catalog/view/theme/tt_t902/template/common/footer.twig
@@ -61,40 +61,42 @@
 </footer>
 <div>
 	<a href="https://api.whatsapp.com/send?phone=5527996090222" target="_blank" class="zap pulse-button">
-		<i style="margin-top:15px" class="fab fa-whatsapp"></i>
+			<i style="margin-top:15px" class="fa fa-whatsapp"></i>
 	</a>
 </div>
 <style>
-	@-webkit-keyframes pulse {to {box-shadow: 0 0 0 50px rgba(37, 211, 102, 0);}}
-	@-moz-keyframes pulse {to {box-shadow: 0 0 0 50px rgba(37, 211, 102, 0);}}
-	@-ms-keyframes pulse {to {box-shadow: 0 0 0 50px rgba(37, 211, 102, 0);}}
-	@keyframes pulse {to {box-shadow: 0 0 0 50px rgba(37, 211, 102, 0);}}
+	<style>
+		@-webkit-keyframes pulse {to {box-shadow: 0 0 0 50px rgba(37, 211, 102, 0);}}
+		@-moz-keyframes pulse {to {box-shadow: 0 0 0 50px rgba(37, 211, 102, 0);}}
+		@-ms-keyframes pulse {to {box-shadow: 0 0 0 50px rgba(37, 211, 102, 0);}}
+		@keyframes pulse {to {box-shadow: 0 0 0 50px rgba(37, 211, 102, 0);}}
 
-	.zap {
-			position:fixed;
-			width:60px;
-			height:60px;
-			bottom:40px;
-			right:40px;
-			background-color:#25d366;
-			color:#FFF;
-			border-radius:50px;
-			text-align:center;
-			font-size:30px;
-			box-shadow: 1px 1px 2px #888;
-			z-index:1000;
-			-webkit-animation: pulse 1.25s infinite cubic-bezier(0.66, 0, 0, 1);
-			-moz-animation: pulse 1.25s infinite cubic-bezier(0.66, 0, 0, 1);
-			-ms-animation: pulse 1.25s infinite cubic-bezier(0.66, 0, 0, 1);
-			animation: pulse 1.25s infinite cubic-bezier(0.66, 0, 0, 1);
-	}
-	.zap:hover {
-			color: #fff;
-			-webkit-animation: none;
-			-moz-animation: none;
-			-ms-animation: none;
-			animation: none;
-	}
+		.zap {
+				position:fixed;
+				width:60px;
+				height:60px;
+				bottom:40px;
+				left:40px;
+				background-color:#25d366;
+				color:#FFF;
+				border-radius:50px;
+				text-align:center;
+				font-size:30px;
+				box-shadow: 1px 1px 2px #888;
+				z-index:1000;
+				-webkit-animation: pulse 1.25s infinite cubic-bezier(0.66, 0, 0, 1);
+				-moz-animation: pulse 1.25s infinite cubic-bezier(0.66, 0, 0, 1);
+				-ms-animation: pulse 1.25s infinite cubic-bezier(0.66, 0, 0, 1);
+				animation: pulse 1.25s infinite cubic-bezier(0.66, 0, 0, 1);
+		}
+		.zap:hover {
+				color: #fff;
+				-webkit-animation: none;
+				-moz-animation: none;
+				-ms-animation: none;
+				animation: none;
+		}
+</style>
 </style>
 <div id="coockiesLS" style="display: none;">
 	<div class="cookieAgree">
