edit font size button whatsapp

--- a/catalog/view/theme/tt_t902/template/common/footer.twig
+++ b/catalog/view/theme/tt_t902/template/common/footer.twig
@@ -61,7 +61,7 @@
 </footer>
 <div>
 	<a href="https://api.whatsapp.com/send?phone=5527996090222" target="_blank" class="zap pulse-button">
-			<i style="margin-top:15px" class="fa fa-whatsapp"></i>
+			<i style="margin-top:15px;font-size: 27px;" class="fa fa-whatsapp"></i>
 	</a>
 </div>
 <style>
