--- a/catalog/view/theme/tt_t902/template/common/layout_content_built.twig
+++ b/catalog/view/theme/tt_t902/template/common/layout_content_built.twig
@@ -29,7 +29,7 @@
 {% endif %}
 {# Compre por marca #}
 <div class="container" style="margin-top: 3rem;">
-	<h2 class="text-center font-bebasneue">Leva logo por marca</h2>
+	<h2 class="text-center font-bebasneue">Compre por Marca</h2>
 	<div id="compre-por-marca">
 		<div>
 			<a href="index.php?route=product/manufacturer/info&manufacturer_id=792">
@@ -51,7 +51,7 @@
 				<img src="image/catalog/carousel/JJ.png" class="img-compre-por-marca" alt="John John">
 			</a>
 		</div>
-		<div>
+		{# <div>
 			<a href="index.php?route=product/manufacturer/info&manufacturer_id=37">
 				<img src="image/catalog/carousel/Levis.png" class="img-compre-por-marca" alt="Levis">
 			</a>
@@ -60,7 +60,7 @@
 			<a href="index.php?route=product/manufacturer/info&manufacturer_id=845">
 				<img src="image/catalog/carousel/Reserva.png" class="img-compre-por-marca" alt="Reserva">
 			</a>
-		</div>
+		</div> #}
 	</div>
 </div>
 {# End compre por marca #}
