voltando as marcas do compre por marca

--- a/catalog/view/theme/tt_t902/template/common/layout_content_built.twig
+++ b/catalog/view/theme/tt_t902/template/common/layout_content_built.twig
@@ -51,7 +51,7 @@
 				<img src="image/catalog/carousel/JJ.png" class="img-compre-por-marca" alt="John John">
 			</a>
 		</div>
-		{# <div>
+		<div>
 			<a href="index.php?route=product/manufacturer/info&manufacturer_id=37">
 				<img src="image/catalog/carousel/Levis.png" class="img-compre-por-marca" alt="Levis">
 			</a>
@@ -60,7 +60,7 @@
 			<a href="index.php?route=product/manufacturer/info&manufacturer_id=845">
 				<img src="image/catalog/carousel/Reserva.png" class="img-compre-por-marca" alt="Reserva">
 			</a>
-		</div> #}
+		</div>
 	</div>
 </div>
 {# End compre por marca #}
