--- a/catalog/view/theme/tt_t902/stylesheet/stylesheet.css
+++ b/catalog/view/theme/tt_t902/stylesheet/stylesheet.css
@@ -236,6 +236,13 @@ a:hover,.banner-3 a:hover::before,
 .owl-container {
 	margin: 0 -15px;
 }
+
+@media only screen and (min-width : 320px) and (max-width : 480px) {
+    .owl-item {
+       width: 20rem !important;
+    }
+}
+
 .owl-container .owl-item {
 	padding: 0 15px;
 }
@@ -2716,12 +2723,12 @@ ul.link-follow li a:hover {
 	/* margin-top: 0; */
 }
 footer{
-	margin-top: 80px;
+	margin-top: 40px;
 }
-.footer-top {
+/* .footer-top {
 	padding: 80px 0 50px 0;
 	border-top: 1px dashed #ebebeb;
-}
+} */
 
 ul.links-footer {
 	display: block;
@@ -4024,7 +4031,7 @@ margin-bottom: 17px;
 		margin: 0 0 60px 0;
 	}
 	footer {
-		margin-top: 60px;
+		margin-top: 30px;
 	}
 	
 	.newletter-popup,
