--- a/catalog/view/theme/tt_t902/stylesheet/stylesheet.css
+++ b/catalog/view/theme/tt_t902/stylesheet/stylesheet.css
@@ -2716,12 +2716,12 @@ ul.link-follow li a:hover {
 	/* margin-top: 0; */
 }
 footer{
-	margin-top: 80px;
+	margin-top: 40px;
 }
-.footer-top {
+/* .footer-top {
 	padding: 80px 0 50px 0;
 	border-top: 1px dashed #ebebeb;
-}
+} */
 
 ul.links-footer {
 	display: block;
@@ -4024,7 +4024,7 @@ margin-bottom: 17px;
 		margin: 0 0 60px 0;
 	}
 	footer {
-		margin-top: 60px;
+		margin-top: 30px;
 	}
 	
 	.newletter-popup,
