--- a/catalog/view/theme/default/template/checkout/payment_address.twig
+++ b/catalog/view/theme/default/template/checkout/payment_address.twig
@@ -36,12 +36,6 @@
         <input type="text" name="lastname" value="" placeholder="{{ entry_lastname }}" id="input-payment-lastname" class="form-control" />
       </div>
     </div>
-    <div class="form-group">
-      <label class="col-sm-2 control-label" for="input-payment-company">{{ entry_company }}</label>
-      <div class="col-sm-10">
-        <input type="text" name="company" value="" placeholder="{{ entry_company }}" id="input-payment-company" class="form-control" />
-      </div>
-    </div>
     <div class="form-group required">
       <label class="col-sm-2 control-label" for="input-payment-address-1">{{ entry_address_1 }}</label>
       <div class="col-sm-10">
@@ -63,7 +57,7 @@
     <div class="form-group required">
       <label class="col-sm-2 control-label" for="input-payment-postcode">{{ entry_postcode }}</label>
       <div class="col-sm-10">
-        <input type="text" name="postcode" value="" placeholder="{{ entry_postcode }}" id="input-payment-postcode" class="form-control" />
+        <input type="text" name="postcode" value="" placeholder="{{ entry_postcode }}" id="input-payment-postcode" class="form-control cep" />
       </div>
     </div>
     <div class="form-group required">
@@ -86,6 +80,12 @@
       <div class="col-sm-10">
         <select name="zone_id" id="input-payment-zone" class="form-control">
         </select>
+      </div>
+    </div>
+    <div class="form-group">
+      <label class="col-sm-2 control-label" for="input-payment-company">{{ entry_company }}</label>
+      <div class="col-sm-10">
+        <input type="text" name="company" value="" placeholder="{{ entry_company }}" id="input-payment-company" class="form-control" />
       </div>
     </div>
     {% for custom_field in custom_fields %}
