--- a/catalog/view/theme/default/template/checkout/payment_address.twig
+++ b/catalog/view/theme/default/template/checkout/payment_address.twig
@@ -37,6 +37,9 @@
       </div>
     </div>
     <div class="form-group required">
+      <input type="hidden" id="for-busca-cep"/>
+    </div>
+    <div class="form-group required">
       <label class="col-sm-2 control-label" for="input-payment-address-1">{{ entry_address_1 }}</label>
       <div class="col-sm-10">
         <input type="text" name="address_1" value="" placeholder="{{ entry_address_1 }}" id="input-payment-address-1" class="form-control" />
