remove compre por marca sol:4543

--- a/catalog/view/theme/tt_t902/template/common/layout_content_built.twig
+++ b/catalog/view/theme/tt_t902/template/common/layout_content_built.twig
@@ -28,7 +28,7 @@
     {% endfor %}
 {% endif %}
 {# Compre por marca #}
-<div class="container" style="margin-top: 3rem;">
+{#<div class="container" style="margin-top: 3rem;">
 	<h2 class="text-center font-bebasneue">Compre por Marca</h2>
 	<div id="compre-por-marca">
 		<div>
@@ -41,7 +41,7 @@
 				<img src="image/catalog/carousel/coke.png" class="img-compre-por-marca" alt="Coca-Cola">
 			</a>
 		</div> #}
-		<div>
+		{#<div>
 			<a href="index.php?route=product/manufacturer/info&manufacturer_id=831">
 				<img src="image/catalog/carousel/Colcci.png" class="img-compre-por-marca" alt="Colcci">
 			</a>
@@ -62,7 +62,7 @@
 			</a>
 		</div>
 	</div>
-</div>
+</div>#}
 {# End compre por marca #}
 
 {# Newsletter #}
