add limit text 1 line for list products

--- a/catalog/view/theme/tt_t902/stylesheet/stylesheet.css
+++ b/catalog/view/theme/tt_t902/stylesheet/stylesheet.css
@@ -4306,3 +4306,12 @@ margin-bottom: 17px;
 .btn-quickview {
 	display: none !important;
 }
+
+h4.product-name > a {
+	overflow: hidden;
+	text-overflow: ellipsis;
+	display: -webkit-box;
+	-webkit-line-clamp: 1;
+	line-clamp: 1;
+	-webkit-box-orient: vertical;
+}
