--- a/catalog/view/theme/tt_t902/template/common/layout_content_built.twig
+++ b/catalog/view/theme/tt_t902/template/common/layout_content_built.twig
@@ -66,7 +66,7 @@
 {# End compre por marca #}
 
 {# Newsletter #}
-<div class="container" id="dialog" style="margin-top: -5rem;">
+<div class="container" id="dialog">
 	<div class="text-center">
 		<div class="newletter-title">
 			<h2 class="font-bebasneue">Receba novidades e promoções</h2>
