--- a/catalog/view/theme/tt_t902/template/common/header.twig
+++ b/catalog/view/theme/tt_t902/template/common/header.twig
@@ -115,11 +115,16 @@
 {% endif %}
 </head>
 <body class="{{ class }} home2">
+	<div class="row" style="margin-top: 1rem;">
+		<div class="col">
+   			<p style="text-align: center;text-decoration: underline;">Frete grátis em compras acima de R$290,00 para região sudeste</p>
+		</div>
+	</div>
 <div class="wrapper">
 <header>
 	
 	<div class="header-top"></div>
-	<div class="header-inner fix" >
+	<div class="header-inner fix fix-header" >
 		<div class="container-inner">
 			<div class="logo-container">
 				<div id="logo">
