--- a/catalog/view/theme/tt_t902/stylesheet/stylesheet.css
+++ b/catalog/view/theme/tt_t902/stylesheet/stylesheet.css
@@ -4043,16 +4043,10 @@ margin-bottom: 17px;
 }
 @media (min-width: 992px) {
 	.common-home .header-inner {
-		position: absolute;
 		left: 0;
 		right: 0;
 		top: 0;
-		background: rgba(0, 0, 0, 0.5);
-		/* background: transparent; */
-		transition: background-color 0.5s ease;
-	}
-	.common-home .header-inner:hover {
-		background-color: #000000;
+		background-color: #fff;
 	}
 }
 @media(min-width: 768px) {
