--- a/catalog/view/theme/tt_t902/template/common/header.twig
+++ b/catalog/view/theme/tt_t902/template/common/header.twig
@@ -122,9 +122,7 @@
 	</div>
 <div class="wrapper">
 <header>
-	
-	<div class="header-top"></div>
-	<div class="header-inner fix fix-header" >
+	<div class="header-inner" >
 		<div class="container-inner">
 			<div class="logo-container">
 				<div id="logo">
