--- a/catalog/view/theme/tt_t902/template/common/header.twig
+++ b/catalog/view/theme/tt_t902/template/common/header.twig
@@ -115,10 +115,8 @@
 {% endif %}
 </head>
 <body class="{{ class }} home2">
-	<div class="row" style="margin-top: 1rem;">
-		<div class="col">
-   			<p style="text-align: center;text-decoration: underline;">Frete grátis em compras acima de R$290,00 para região sudeste</p>
-		</div>
+	<div class="" style="margin-top: 1rem;max-width: 100%;">
+		<p style="text-align: center;text-decoration: underline;">Frete grátis em compras acima de R$290,00 para região sudeste</p>
 	</div>
 <div class="wrapper">
 <header>
